[gd_scene load_steps=7 format=3 uid="uid://cnxg7mpht65to"]

[ext_resource type="Script" path="res://scripts/options_menu.gd" id="1_4irqt"]
[ext_resource type="PackedScene" uid="uid://ddqlj1gkxwmxg" path="res://assets/options_menu/volume_slider.tscn" id="2_lewk4"]
[ext_resource type="Texture2D" uid="uid://f0iq3mlb0w6a" path="res://assets/options_menu/MainMenuButton.png" id="3_c5d6j"]
[ext_resource type="Texture2D" uid="uid://cmvam66j30hf7" path="res://assets/options_menu/optionsText.png" id="4_3edha"]
[ext_resource type="AudioStream" uid="uid://dcyb746apnsow" path="res://sounds/buttonPress.mp3" id="5_db1to"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p8odl"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4irqt")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="SPACING" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="masterVolume" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Master Volume"
horizontal_alignment = 1

[node name="master_slider" parent="MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("2_lewk4")]
layout_mode = 2
bus_name = "Master"

[node name="SPACING" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="musicVolume" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Music Volume"
horizontal_alignment = 1

[node name="music_slider" parent="MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("2_lewk4")]
layout_mode = 2
bus_name = "music"

[node name="SPACING2" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="sfxVolume" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "SFX Volume"
horizontal_alignment = 1

[node name="sfx_slider" parent="MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("2_lewk4")]
layout_mode = 2
bus_name = "sfx"

[node name="SPACING3" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2

[node name="mainMenuButton" type="Button" parent="."]
layout_mode = 2
offset_left = 439.0
offset_top = 480.0
offset_right = 1047.0
offset_bottom = 688.0
scale = Vector2(0.45, 0.45)
theme_override_styles/hover = SubResource("StyleBoxFlat_p8odl")
icon = ExtResource("3_c5d6j")
metadata/_edit_lock_ = true

[node name="OptionsText" type="Sprite2D" parent="."]
position = Vector2(578, 58)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_3edha")

[node name="buttonPress" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_db1to")
volume_db = -4.0

[connection signal="pressed" from="mainMenuButton" to="." method="_on_main_menu_button_pressed"]
